add new website from server na

--- a/xem-phim-bo/tinh-vo-than-quyet/index.html
+++ b/xem-phim-bo/tinh-vo-than-quyet/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/100-nguoi-thu-nghiem-phan-1" title="100 Người Thử Nghiệm (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/biet-doi-trung-phat" title="Biệt Đội Trừng Phạt">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/100-nguoi-thu-nghiem-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-trung-phat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             100 Người Thử Nghiệm (Phần 1)
+             Biệt Đội Trừng Phạt
             </span>
             <span class="list-top-movie-item-en">
-             The 100 (Season 1)
+             Sinners and Saints
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/malum" title="Malum">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/malum-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Malum
+            </span>
+            <span class="list-top-movie-item-en">
+             Malum
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/percy-jackson-va-cac-vi-than-tren-dinh-olympus" title="Percy Jackson và Các Vị Thần Trên Đỉnh Olympus">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/percy-jackson-va-cac-vi-than-tren-dinh-olympus-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Percy Jackson và Các Vị Thần Trên Đỉnh Olympus
+            </span>
+            <span class="list-top-movie-item-en">
+             Percy Jackson and the Olympians
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1681,21 +1725,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giai-thoat-2" title="Giải thoát">
+          <a class="list-top-movie-link" href="/phim-moi/vuot-nguc-phan-5" title="Vượt ngục (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giai-thoat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuot-nguc-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giải thoát
+             Vượt ngục (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Enough
+             Prison Break (Season 5): Sequel
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1703,62 +1747,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vuong-gia-thien-ha" title="Vương Giả Thiên Hạ">
+          <a class="list-top-movie-link" href="/phim-moi/cuop-thanh-xuan-1997" title="Cướp thanh xuân 1997">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuong-gia-thien-ha-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuop-thanh-xuan-1997-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vương Giả Thiên Hạ
+             Cướp thanh xuân 1997
             </span>
             <span class="list-top-movie-item-en">
-             Kingdom
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/el-juego-del-miedo-v" title="El juego del miedo V">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/el-juego-del-miedo-v-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             El juego del miedo V
-            </span>
-            <span class="list-top-movie-item-en">
-             Saw V
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yeu-la-mu-quang" title="Yêu là mù quáng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-la-mu-quang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Yêu là mù quáng
-            </span>
-            <span class="list-top-movie-item-en">
-             Love Is Blind
+             Borrowed Youth
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
