add new website from server na

--- a/xem-phim-bo/naruto-shippuden/index.html
+++ b/xem-phim-bo/naruto-shippuden/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1743,84 +1743,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-vo-thuat" title="Nữ Hoàng Võ Thuật">
+          <a class="list-top-movie-link" href="/phim-moi/berlin-berlin-co-dau-thao-chay" title="Berlin, Berlin: Cô dâu tháo chạy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-vo-thuat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/berlin-berlin-co-dau-thao-chay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nữ Hoàng Võ Thuật
+             Berlin, Berlin: Cô dâu tháo chạy
             </span>
             <span class="list-top-movie-item-en">
-             The Queen of KungFu
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bong-ma-anh-quoc-phan-3" title="Bóng ma Anh Quốc (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bong-ma-anh-quoc-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bóng ma Anh Quốc (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Peaky Blinders (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tho-lan-ngoc-trai" title="Thợ Lặn Ngọc Trai">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-lan-ngoc-trai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thợ Lặn Ngọc Trai
-            </span>
-            <span class="list-top-movie-item-en">
-             Pearl Diver
-            </span>
-            <span class="list-top-movie-item-view">
-             10 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/evil-dead" title="Evil Dead">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/evil-dead-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Evil Dead
-            </span>
-            <span class="list-top-movie-item-en">
-             Evil Dead
+             Berlin, Berlin: Lolle on the Run
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1831,21 +1765,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gui-anh-nguoi-tung-yeu-em" title="Gửi Anh, Người Từng Yêu Em">
+          <a class="list-top-movie-link" href="/phim-moi/bach-nien-hao-hop" title="Bách niên hảo hợp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gui-anh-nguoi-tung-yeu-em-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bach-nien-hao-hop-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gửi Anh, Người Từng Yêu Em
+             Bách niên hảo hợp
             </span>
             <span class="list-top-movie-item-en">
-             Men Are Men
+             Love for All Seasons
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/fist-of-fury" title="Fist of Fury">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fist-of-fury-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Fist of Fury
+            </span>
+            <span class="list-top-movie-item-en">
+             Fist of Fury
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bac-si-sat-nhan" title="Bác Sĩ Sát Nhân">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-si-sat-nhan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bác Sĩ Sát Nhân
+            </span>
+            <span class="list-top-movie-item-en">
+             Re-Animator
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tro-bip-cuoc-doi" title="Trò Bịp Cuộc Đời">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-bip-cuoc-doi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Trò Bịp Cuộc Đời
+            </span>
+            <span class="list-top-movie-item-en">
+             Ley Luang
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
